--- a/FinanceTracker/src/main/resources/com/example/financetracker/LoginPage.fxml
+++ b/FinanceTracker/src/main/resources/com/example/financetracker/LoginPage.fxml
@@ -13,29 +13,31 @@
    <children>
       <AnchorPane prefHeight="600.0" prefWidth="271.0" style="-fx-background-color: #3490dc;">
          <children>
-            <Label layoutX="107.0" layoutY="104.0" text="Login" textFill="WHITE" />
-            <Label layoutX="15.0" layoutY="277.0" text="Username" textFill="WHITE">
+            <Label layoutX="94.0" layoutY="137.0" text="Login" textFill="WHITE">
+               <font>
+                  <Font size="24.0" />
+               </font></Label>
+            <Label layoutX="27.0" layoutY="236.0" text="Username" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font></Label>
-            <Label layoutX="15.0" layoutY="361.0" text="Password" textFill="WHITE" />
-            <TextField fx:id="tf_username" layoutX="16.0" layoutY="311.0" prefHeight="25.0" prefWidth="215.0" promptText="Enter Email" style="-fx-background-radius: 12; -fx-background-color: #8ecae6;">
+            <Label layoutX="27.0" layoutY="316.0" text="Password" textFill="WHITE" />
+            <TextField fx:id="tf_username" layoutX="16.0" layoutY="268.0" prefHeight="25.0" prefWidth="215.0" promptText="Enter Email" style="-fx-background-radius: 12; -fx-background-color: #8ecae6;">
                <font>
                   <Font name="Arial" size="13.0" />
                </font>
             </TextField>
-            <TextField fx:id="tf_password" layoutX="15.0" layoutY="384.0" prefHeight="25.0" prefWidth="215.0" promptText="Enter Password" style="-fx-background-radius: 12; -fx-background-color: #8ecae6;">
+            <TextField fx:id="tf_password" layoutX="15.0" layoutY="341.0" prefHeight="25.0" prefWidth="215.0" promptText="Enter Password" style="-fx-background-radius: 12; -fx-background-color: #8ecae6;">
                <font>
                   <Font name="Arial" size="13.0" />
                </font>
             </TextField>
-            <Button fx:id="button_login" layoutX="73.0" layoutY="435.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="100.0" style="-fx-background-color: #FF9F1C; -fx-cursor: hand;" text="Login" textFill="WHITE">
+            <Button fx:id="button_login" layoutX="114.0" layoutY="413.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="115.0" style="-fx-background-color: #FF9F1C; -fx-cursor: hand;" text="Login" textFill="WHITE">
                <font>
                   <Font name="Arial" size="16.0" />
                </font>
             </Button>
-            <Label layoutX="32.0" layoutY="523.0" text="Not a Member" />
-            <Button fx:id="button_signup" layoutX="138.0" layoutY="515.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="78.0" style="-fx-background-color: #FFFFFF; -fx-cursor: hand;" text="SignUp" textFill="#3490dc" />
+            <Button fx:id="button_signup" layoutX="22.0" layoutY="413.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="78.0" style="-fx-background-color: #FFFFFF; -fx-cursor: hand;" text="SignUp" textFill="#3490dc" />
          </children>
       </AnchorPane>
       <AnchorPane prefHeight="600.0" prefWidth="579.0" style="-fx-background-color: #FFFFFF;">
