--- a/FinanceTracker/src/main/resources/com/example/financetracker/Account.fxml
+++ b/FinanceTracker/src/main/resources/com/example/financetracker/Account.fxml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<?import javafx.scene.control.TextField?>
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <left>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #63458A;" BorderPane.alignment="CENTER">
+      <AnchorPane prefHeight="607.0" prefWidth="216.0" style="-fx-background-color: #3490dc;" BorderPane.alignment="CENTER">
          <children>
             <Button fx:id="buttonTansaction" layoutX="16.0" layoutY="232.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="167.0" style="-fx-background-color: #0AD3FF; -fx-background-radius: 10;" text="Transactions" />
             <Button fx:id="buttonLogout" layoutY="551.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="203.0" style="-fx-background-color: #FF9600;" text="Logout" textAlignment="CENTER">
@@ -36,10 +35,10 @@
       </AnchorPane>
    </left>
    <right>
-      <AnchorPane prefHeight="600.0" prefWidth="602.0" style="-fx-background-color: #E1FAF9;" BorderPane.alignment="CENTER">
+      <AnchorPane prefHeight="600.0" prefWidth="568.0" style="-fx-background-color: #FFFFFF;" BorderPane.alignment="CENTER">
          <children>
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#63458a" height="131.0" layoutX="-3.0" layoutY="-52.0" stroke="#ffffff00" strokeType="OUTSIDE" width="613.0" />
-            <Text fill="#ffffff66" layoutY="49.0" stroke="#60428600" strokeType="OUTSIDE" strokeWidth="0.0" text="Accounts" textAlignment="CENTER" wrappingWidth="597.21630859375">
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="134.0" layoutX="19.0" layoutY="-53.0" stroke="#ffffff00" strokeType="OUTSIDE" width="593.0" />
+            <Text fill="#58a672" layoutX="17.0" layoutY="55.0" stroke="#60428600" strokeType="OUTSIDE" strokeWidth="0.0" text="Accounts" textAlignment="CENTER" wrappingWidth="598.21630859375">
                <font>
                   <Font size="36.0" />
                </font>
@@ -49,7 +48,7 @@
                   <Font size="18.0" />
                </font>
             </Text>
-            <TextField fx:id="txtAccountName"  layoutX="270.0" layoutY="145.0" prefHeight="27.0" prefWidth="253.0" />
+            <TextField fx:id="txtAccountName" layoutX="270.0" layoutY="145.0" prefHeight="27.0" prefWidth="253.0" />
             <Text fill="#00000080" layoutX="127.0" layoutY="266.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Type">
                <font>
                   <Font size="18.0" />
@@ -66,7 +65,7 @@
                   <Font size="18.0" />
                </font>
             </Text>
-            <TextField fx:id="txtNote"  layoutX="272.0" layoutY="391.0" prefHeight="27.0" prefWidth="251.0" />
+            <TextField fx:id="txtNote" layoutX="272.0" layoutY="391.0" prefHeight="27.0" prefWidth="251.0" />
             <Button fx:id="buttonAdd" layoutX="316.0" layoutY="492.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="207.0" style="-fx-background-color: #86E7B8;" text="Add" />
             <Text fx:id="valAccountName" fill="#d81e5b" layoutX="272.0" layoutY="208.0" strokeType="OUTSIDE" strokeWidth="0.0" text="*" wrappingWidth="252.9831027984619" />
             <Text fx:id="valAmount" fill="#d81e5b" layoutX="270.0" layoutY="357.0" strokeType="OUTSIDE" strokeWidth="0.0" text="*" wrappingWidth="252.9831027984619" />
