--- a/FinanceTracker/src/main/resources/com/example/financetracker/application.css
+++ b/FinanceTracker/src/main/resources/com/example/financetracker/application.css
@@ -1,1 +1,10 @@
 /* JavaFX CSS - Leave this comment until you have at least create one rule which uses -fx-Property */
+/* Set default font family to Poppins */
+* {
+    -fx-font-family: "Poppins";
+}
+
+/* Set font size for all labels */
+.label {
+    -fx-font-size: 14pt;
+}
