--- a/FinanceTracker/src/main/resources/com/example/financetracker/MainDashboard.fxml
+++ b/FinanceTracker/src/main/resources/com/example/financetracker/MainDashboard.fxml
@@ -6,7 +6,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -53,7 +52,7 @@
                   <Font size="18.0" />
                </font>
             </Text>
-            <Text fx:id="txtTotalBalance" fill="#7e5a9b" layoutX="34.0" layoutY="184.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0.0" wrappingWidth="529.4414367675781">
+            <Text fx:id="txtTotalBalance" fill="#86e7b8" layoutX="34.0" layoutY="184.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0.0" wrappingWidth="529.4414367675781">
                <font>
                   <Font size="64.0" />
                </font>
@@ -79,7 +78,7 @@
                      <content>
                         <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #ffafcc;">
                            <children>
-                              <BarChart fx:id="chartExpense1" prefHeight="298.0" prefWidth="566.0" title="Income">
+                              <BarChart fx:id="chartIncome" prefHeight="298.0" prefWidth="566.0" title="Income">
                                  <xAxis>
                                     <CategoryAxis side="BOTTOM" />
                                  </xAxis>
@@ -94,13 +93,7 @@
                     <content>
                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: #FF9600;">
                            <children>
-                              <TableView layoutY="1.0" prefHeight="294.0" prefWidth="564.0">
-                                <columns>
-                                  <TableColumn prefWidth="75.0" text="Date" />
-                                  <TableColumn prefWidth="143.0" text="Amount" />
-                                    <TableColumn prefWidth="833.0000305175781" text="Note on Transaction" />
-                                </columns>
-                              </TableView>
+                              <TableView fx:id="tableTransactions" layoutY="1.0" prefHeight="294.0" prefWidth="564.0" />
                            </children>
                         </AnchorPane>
                     </content>
@@ -112,7 +105,7 @@
                   <Font size="18.0" />
                </font>
             </Text>
-            <Text fx:id="txtTotalExpense" fill="#7e5a9b" layoutX="320.0" layoutY="184.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0.0" wrappingWidth="289.4414367675781">
+            <Text fx:id="txtTotalExpense" fill="#ff9600" layoutX="320.0" layoutY="184.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0.0" wrappingWidth="289.4414367675781">
                <font>
                   <Font size="64.0" />
                </font>
